--- a/templates/articles.html
+++ b/templates/articles.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="/static/css/app-consolidated.css?v=1" />
 
     <!-- HTMX for dynamic functionality -->
-    <script src="https://unpkg.com/htmx.org@1.9.10"></script>
+    <script src="https://unpkg.com/htmx.org@1.9.10"
+            integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC"
+            crossorigin="anonymous"></script>
 
     <!-- Custom NewsBalancer styles -->
 
