--- a/templates/articles_htmx.html
+++ b/templates/articles_htmx.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NewsBalancer - Articles</title>
     <!-- HTMX CDN -->
-    <script src="https://unpkg.com/htmx.org@1.9.10"></script>
+    <script src="https://unpkg.com/htmx.org@1.9.10"
+            integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC"
+            crossorigin="anonymous"></script>
     <!-- HTMX Extensions -->
-    <script src="https://unpkg.com/htmx.org/dist/ext/loading-states.js"></script>
+    <script src="https://unpkg.com/htmx.org/dist/ext/loading-states.js"
+            crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/static/css/app-consolidated.css?v=1" />
 
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
