security: Fix SonarQube security issues and hotspots
- Fix SQL injection concern in database.go by using quoted identifiers for table names
- Add resource integrity attributes to HTMX loading-states.js CDN script
- Add input validation for go env command parameters to prevent command injection
- All fixes maintain existing functionality while addressing security best practices
- Resolves 3 security hotspots: SQL injection (HIGH), missing SRI (LOW), PATH command execution (LOW)

--- a/templates/articles_htmx.html
+++ b/templates/articles_htmx.html
@@ -9,7 +9,8 @@
             integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC"
             crossorigin="anonymous"></script>
     <!-- HTMX Extensions -->
-    <script src="https://unpkg.com/htmx.org/dist/ext/loading-states.js"
+    <script src="https://unpkg.com/htmx.org@1.9.10/dist/ext/loading-states.js"
+            integrity="sha384-v04dReCP6N+wBCc+JjDUHyvkWJPO5jyzXxNdZHF/HZVyMXhh2USfi3UvCfiPwmmB"
             crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/static/css/app-consolidated.css?v=1" />
 
